--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -19,6 +19,7 @@ header
                             i.fa.fa-user
                         else
                             img.header__avatar(src="/" + loggedInUser.avatarUrl)
+                            //- img.header__avatar(src=loggedInUser.avatarUrl,crossorigin)
 
             else
                 li 
