--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -9,12 +9,15 @@
 @import "./components/shared.scss";
 @import "./components/form.scss";
 @import "./components/social-login.scss";
+@import "./components/video-player.scss";
 
 // Screens
 @import "./screens/home.scss";
 @import "./screens/search.scss";
 @import "./screens/profile.scss";
 @import "./screens/edit-profile.scss";
+@import "./screens/upload.scss";
+@import "./screens/watch.scss";
 
 
 
@@ -36,4 +39,41 @@ main {
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+@keyframes goAway {
+    from {
+        transform: none;
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+}
+
+.message {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    max-width: 200px;
+    padding: 10px 20px;
+    border-radius: 10000px;
+    text-align: center;
+    animation: goAway 0.5s ease-in-out forwards;
+    animation-delay: 5s;
+    &.error {
+        background-color: tomato;
+        color: white;
+    }
+    &.info {
+        background-color: rgb(7, 56, 75);
+        color: white;
+    }
+    &.success {
+        background-color: rgb(8, 66, 8);
+        color: white;
+    }
 }
