--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,3 +1,5 @@
+include mixins/message
+
 doctype html 
 html(lang="ko")
     head 
@@ -6,6 +8,12 @@ html(lang="ko")
         link(rel="stylesheet" href="/static/css/styles.css")
 
     body 
+        if messages.error 
+            +message("error", messages.error)
+        if messages.info 
+            +message("info", messages.info)
+        if messages.success 
+            +message("success", messages.success)
         include partials/header.pug
                     
         main
@@ -13,3 +21,5 @@ html(lang="ko")
 
         include partials/footer.pug
     script(src="/static/js/main.js")
+    script(src="/static/js/main.js")
+    block scripts
