--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,13 +1,21 @@
 extends base
 
 block content 
-    if errorMessage 
-        span=errorMessage 
+    div.upload__container
+        div.upload__video
+            video#preview
+            button#actionBtn.social__btn Start Recording
+        if errorMessage 
+            span=errorMessage 
+        form(method="POST", enctype="multipart/form-data")
+            label(for="video") Video File
+            input(type="file", accept="video/*", required, id="video", name="video")
+            label(for="thumb") Thumbnail File
+            input(type="file", accept="image/*", required, id="thumb", name="thumb")
+            input(placeholder="Title", name="title", required, type="text", maxlength=80)
+            input(type="text", placeholder="Description", name="description", required, minlength=20)
+            input(type="text", placeholder="Hashtags, separated by comma", name="hashtags", required)
+            input(type="submit", value="Upload Video")
 
-    form(method="POST", enctype="multipart/form-data")
-        label(for="video") Video File
-        input(type="file", accept="video/*", required, id="video", name="video")
-        input(placeholder="Title", name="title", required, type="text", maxlength=80)
-        input(type="text", placeholder="Description", name="description", required, minlength=20)
-        input(type="text", placeholder="Hashtags, separated by comma", name="hashtags", required)
-        input(type="submit", value="Upload Video")
+block scripts 
+    script(src="/static/js/recorder.js")
