--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,8 +18,10 @@ header
                         if !loggedInUser.avatarUrl
                             i.fa.fa-user
                         else
-                            img.header__avatar(src="/" + loggedInUser.avatarUrl)
-                            //- img.header__avatar(src=loggedInUser.avatarUrl,crossorigin)
+                            if loggedInUser.socialOnly
+                                img.header__avatar(src=loggedInUser.avatarUrl)
+                            else 
+                                img.header__avatar(src="/" + loggedInUser.avatarUrl)
 
             else
                 li 
