--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,7 +18,7 @@ header
                         if !loggedInUser.avatarUrl
                             i.fa.fa-user
                         else
-                            if loggedInUser.avatarUrl.includes("github")
+                            if loggedInUser.avatarUrl.toString().includes("github")
                                 img.header__avatar(src=loggedInUser.avatarUrl)
                             else 
                                 img.header__avatar(src="/" + loggedInUser.avatarUrl)
