--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -2,8 +2,11 @@ mixin video(video)
 
     a(href=`/videos/${video._id}`).video-mixin
         //- div.video-mixin__thumb(style=`background-image:url(${video.thumbUrl}); background-size:cover; background-position:center` )
-        div
-            img(src=video.thumbUrl crossorigin).video-mixin__thumb
+        div 
+            if isHeroku 
+                img(src=video.thumbUrl crossorigin).video-mixin__thumb
+            else 
+                img(src= '/' + video.thumbUrl crossorigin).video-mixin__thumb
         div.video-mixin__data
             span.video-mixin__title=video.title
             div.video-mixin__meta
