--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -7,7 +7,10 @@ block content
             if !loggedInUser.avatarUrl
                 img(src="/uploads/avatars/user-solid.svg").avatar
             else
-                img(src=user.avatarUrl crossorigin).avatar
+                if isHeroku
+                    img(src=user.avatarUrl crossorigin).avatar
+                else
+                    img(src= '/' + user.avatarUrl crossorigin).avatar
             h3=user.name
     div.video-grid
         each video in user.videos 
